--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 <a id="previous-talks" class="anchor" href="#previous-talks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Previous Talks</h3>
 
 <table>
-  <tr><th>Date</th><th>Speaker</th>    <th>Slides/Material</th><th>Data</th><th>Code</th>
+  <tr><th>Date</th><th>Speaker</th><th>Slides/Material</th><th>Data</th><th>Code</th>
   </tr><tr>
-    <td>Jan 26, 2016</td><a href="hanneshapke.github.io/">Hannes</a><td><a href="//github.com/hanneshapke/PDX-data-perceptron/">Perceptrons</a></td><td></td><td><a href="//github.com/hanneshapke/PDX-data-perceptron/">GitHub Repo</a></td>
-  <tr>
+    <td>Jan 26, 2016</td>
+    <td><a href="hanneshapke.github.io/">Hannes</a></td>
+    <td><a href="//github.com/hanneshapke/PDX-data-perceptron/">Perceptrons</a></td>
+    <td></td>
+    <td><a href="//github.com/hanneshapke/PDX-data-perceptron/">GitHub Repo</a></td>
+  </tr><tr>
     <td>2015</td>
     <td>Rob Story</td>
     <td><a href="https://github.com/wrobstory/pdxdatasci2014">"Python Data Visualization, What now?"</a></td>
